# odatacpp-client

./: .gitignore  CMakeLists.txt  CNAME  CONTRIBUTING.md  LICENSE.txt  README  README.md  dirs.proj  index.html  license.txt  params.json  setup_ps_env_VS2012.ps1  setup_ps_env_VS2013.ps1  test.md
include/odata/client/: odata_client.h  odata_client_options.h
include/odata/codegen/: code_generation.h  code_generation_base.h  code_generation_helper.h  odata_complex_query_executor.h  odata_entity_tracker.h  odata_entityset_query_executor.h  odata_enum_query_executor.h  odata_function_param_formatter.h  odata_primitive_query_executor.h  odata_query_builder.h  odata_query_option.h  odata_query_path.h  odata_query_path_composer.h  odata_service_context.h  odata_service_query.h  odata_singleton_query_executor.h  odata_void_query_executor.h
include/odata/common/: platform.h  utility.h  xmlhelpers.h  xmlstream.h
include/odata/communication/: http_communication.h  http_implement.h  http_service_exception.h  http_utility.h
include/odata/core/: odata_collection_value.h  odata_complex_value.h  odata_context_url_parser.h  odata_core.h  odata_entity_factory.h  odata_entity_model_builder.h  odata_entity_value.h  odata_enum_value.h  odata_json_constants.h  odata_json_operation_payload_parameter_writer.h  odata_json_operation_url_parameter_writer.h  odata_json_reader.h  odata_json_reader_full.h  odata_json_reader_minimal.h  odata_json_writer.h  odata_json_writer_full.h  odata_json_writer_minimal.h  odata_parameter.h  odata_payload.h  odata_primitive_value.h  odata_property_map.h  odata_structured_value.h  odata_value.h
include/odata/edm/: edm_entity_container.h  edm_entity_set.h  edm_model.h  edm_model_factory.h  edm_model_reader.h  edm_model_utility.h  edm_schema.h  (+5 more)
ios/: CMakeLists.txt  configure.sh
msvc/: Common.Build.Traversal.targets  Common.Build.settings  Common.props  TestRunner.vs11.vcxproj  TestRunner.vs11.vcxproj.filters  UnitTestpp.vs11.vcxproj  dirs.proj  odata_client.vs11.vcxproj  odata_client.vs11.vcxproj.filters  odata_codegen_tool.vs11.vcxproj  odata_e2e_test.vs11.vcxproj  odata_functional_test.vs11.vcxproj  odata_functional_test.vs11.vcxproj.filters  odata_library.vs11.vcxproj  odata_library.vs11.vcxproj.filters  odata_trippin_sample.vs11.vcxproj  odatacpp_dist.sln  odatacpp_samples.sln  odatacpp_tests.sln  utilities.vs11.vcxproj
msvc/vs11/: Common.vs11.props  TestRunner.vs11.vcxproj  UnitTestpp.vs11.vcxproj  dirs.proj  odata_client.vs11.vcxproj  odata_client.vs11.vcxproj.filters  odata_codegen_tool.vs11.vcxproj  odata_e2e_test.vs11.vcxproj  odata_exchange_sample.vs11.vcxproj  odata_functional_test.vs11.vcxproj  odata_functional_test.vs11.vcxproj.filters  odata_trippin_sample.vs11.vcxproj  odatacpp.sln  odatacpp_samples.sln  packages.config  utilities.vs11.vcxproj  utilities.vs11.vcxproj.filters
msvc/vs12/: Common.vs12.props  TestRunner.vs12.vcxproj  TestRunner.vs12.vcxproj.filters  UnitTestpp.vs12.vcxproj  UnitTestpp.vs12.vcxproj.filters  dirs.proj  odata_client.vs12.vcxproj  odata_client.vs12.vcxproj.filters  odata_codegen_tool.vs12.vcxproj  odata_e2e_test.vs12.vcxproj  odata_exchange_sample.vs12.vcxproj  odata_functional_test.vs12.vcxproj  odata_functional_test.vs12.vcxproj.filters  odata_trippin_sample.vs12.vcxproj  odatacpp.sln  odatacpp_samples.sln  utilities.vs12.vcxproj
nuget/: odatacpp-client.autopkg
samples/trippin_sample/: trippin_sample.cpp  trippin_service.cpp  trippin_service.h
scripts/: add_license_header.sh  copyright.txt
src/: CMakeLists.txt
src/client/: odata_client.cpp
src/codegen/: code_generation_base.cpp  odata_entity_tracker.cpp  odata_query_path.cpp
src/common/: utility.cpp  xmlhelpers.cpp
src/communication/: http_implement.cpp
src/core/: odata_context_url_parser.cpp  odata_entity_model_builder.cpp  odata_entity_value.cpp  odata_json_constants.cpp  odata_json_operation_payload_parameter_writer.cpp  odata_json_operation_url_parameter_writer.cpp  odata_json_reader.cpp  odata_json_reader_full.cpp  odata_json_reader_minimal.cpp  odata_json_writer.cpp  odata_json_writer_full.cpp  odata_json_writer_minimal.cpp  odata_primitive_value.cpp  odata_property_map.cpp  odata_structured_value.cpp
src/edm/: edm_entity_container.cpp  edm_model.cpp  edm_model_reader.cpp  edm_model_utility.cpp  edm_schema.cpp  edm_type.cpp
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  common_tests.cpp  containment_tests.cpp  derived_type_tests.cpp  e2e_test_case.cpp  e2e_test_case.h  e2e_tests.h  edit_link_tests.cpp  enum_tests.cpp  exchange_service.cpp  exchange_service.h  exchange_test_case.h  exchange_tests.cpp  function_action_tests.cpp  navigation_property_tests.cpp  odata_wcf_service.cpp  odata_wcf_service.h  query_option_tests.cpp  reference_tests.cpp  singleton_tests.cpp
tests/framework/utilities/: CMakeLists.txt  os_utilities.cpp  stdafx.h
tests/framework/utilities/include/: common_utilities_public.h  os_utilities.h
tests/functional/: CMakeLists.txt  odata_tests.cpp  odata_tests.h
tests/functional/client_test/: odata_query_builder_test.cpp
tests/functional/codegen_test/: codegen_test.cpp  codegen_test_service.cpp  codegen_test_service.h
tests/functional/codegen_tool_test/: codegen_basic_test.cpp  codegen_tool_test_case.h
tests/functional/codegen_tool_test/baseline/: DefaultServiceModel.xml  SimpleModel.xml  default_service_test_baseline.cpp  default_service_test_baseline.h  simple_model_test_baseline.cpp  simple_model_test_baseline.h
tests/functional/common_test/: common_utility_test.cpp
tests/functional/common_utility_test/: common_utility_test.cpp
tests/functional/core_test/: odata_collection_value_test.cpp  odata_context_url_parser_test.cpp  odata_entity_value_test.cpp  odata_json_reader_test.cpp  odata_json_writer_test.cpp  odata_value_test.cpp
tests/functional/edm_test/: edm_model_reader_test.cpp  edm_model_utility_test.cpp
tools/: CMakeLists.txt
tools/codegentool/: CMakeLists.txt  odata_codegen_initializer.cpp  odata_codegen_initializer.h  odata_codegen_tools.cpp  odata_codegen_writer.cpp  odata_codegen_writer.h
(+54 files in other folders)
